--- a/src/components/CartItem/CartItem.module.css
+++ b/src/components/CartItem/CartItem.module.css
@@ -1,23 +1,25 @@
 .item {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-columns: 1.5fr 1.5fr 4fr 1.5fr 1.5fr;
+  grid-template-columns: 2fr 3fr 4fr 3fr 2fr;
   align-items: center;
-  /* column-gap: 4.8rem; */
-  /* align-items: center; */
-  margin-top: 3.2rem;
-  padding-top: 3.2rem;
+  margin-top: 2.4rem;
+  padding-bottom: 2.4rem;
+  border-bottom: 1px solid #eee;
+  user-select: none;
+}
+
+.item:last-child {
+  border: none;
 }
 
 .item_img {
   width: 40%;
+  justify-self: center;
 }
+
 .book_img {
   width: 100%;
 }
-
-/* .item_info {
-} */
 
 .book_title {
   font-size: 1.8rem;
@@ -47,7 +49,7 @@
 .plus {
   color: #333;
   cursor: pointer;
-  /* transition: all 0.3s; */
+  transition: all 0.3s;
 }
 
 .minus:hover,
@@ -63,4 +65,14 @@
   font-size: 1.8rem;
   color: #333;
   font-weight: 600;
+}
+
+.remove_icon {
+  color: #aaa;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.remove_icon:hover {
+  color: #333;
 }
