--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -1,7 +1,6 @@
 .book_card {
   display: flex;
   flex-direction: column;
-  
 }
 .book_img_box {
   position: relative;
@@ -82,7 +81,6 @@
   display: flex;
   align-items: center;
   gap: 1.2rem;
-  
 }
 
 .book_price {
@@ -91,17 +89,21 @@
   font-weight: 500;
 }
 
-.btn {
+.btn,
+.btn_disabled {
   /* By default buttons do not inherit font-family from body */
   font-family: inherit;
   font-size: 1.4rem;
   font-weight: 500;
   display: inline-block;
-  background-color: #e67e22;
   padding: 0.8rem 1.6rem;
   border: none;
   border-radius: 9px;
   color: #fff;
+}
+
+.btn {
+  background-color: #e67e22;
   cursor: pointer;
   transition: all 0.3s;
 }
@@ -110,10 +112,12 @@
   background-color: #cf711f;
 }
 
-.btn span {
+.btn span,
+.btn_disabled span {
   display: inline-block;
   vertical-align: middle;
 }
 
-
-
+.btn_disabled {
+  background-color: #555;
+}
