--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -38,16 +38,25 @@
   margin-top: auto;
 }
 
-.tag_genre {
+.tag_genre,
+.tag_seller {
   display: inline-block;
   padding: 0.4rem 0.8rem;
   font-size: 1rem;
   text-transform: uppercase;
-  background-color: #51cf66;
   color: #333;
   /* letter-spacing: 0.75px; */
   border-radius: 100px;
   font-weight: 600;
+}
+
+.tag_genre {
+  background-color: #51cf66;
+  margin-right: 1.6rem;
+}
+
+.tag_seller {
+  background-color: #ffd43b;
 }
 
 .title_link {
